--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,12 @@ dependencies:
   image_picker: ^0.4.10
   cached_network_image: any
   intl: ">=0.14.0"
+  flutter_launcher_icons: ^0.6.1
+
+flutter_icons:
+  android: true
+  ios: true 
+  image_path: "assets/img/icon.png"
 
 dev_dependencies:
   flutter_test:
