--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,8 @@ dependencies:
   cached_network_image: any
   intl: ">=0.14.0"
   flutter_launcher_icons: ^0.6.1
+  onesignal: ^1.0.2
+
 
 flutter_icons:
   android: true
