--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   charts_flutter: any
   flutter_webview_plugin: any
   flutter_masked_text: ^0.7.0
+  flutter_pagewise: ^0.5.0
 
 
 flutter_icons:
