--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   flutter_masked_text: ^0.7.0
   flutter_pagewise: ^0.5.0 
   gradient_widgets: ^0.3.0 
+  flutter_circular_chart: ^0.1.0
 
 
 flutter_icons:
